url checking -- done

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_C_STANDARD 11)
 add_executable(server main.c)
 
 # Define the libraries and paths
-set(libraries myLogger server_network myString system_info)
-set(paths ../custom-libraries/myLogger libraries/server_network ../custom-libraries/myString ../custom-libraries/system_info)
+set(libraries myLogger server_network myString system_info web_handler)
+set(paths ../custom-libraries/myLogger libraries/server_network ../custom-libraries/myString ../custom-libraries/system_info libraries/web_handler)
 
 # Loop through the libraries
 list(LENGTH libraries num_libraries)
@@ -27,13 +27,17 @@ foreach(index RANGE ${num_libraries})
     # Set the library output directory
     set_target_properties(${library} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
-    # Check if the library is server_network and link myString
+    # Check if the library is server_network and link myLogger
     if(${library} STREQUAL "server_network")
         target_link_libraries(${library} PRIVATE myLogger)
     endif()
 
     if(${library} STREQUAL "myLogger")
         target_link_libraries(${library} PRIVATE myString system_info)
+    endif()
+
+    if(${library} STREQUAL "web_handler")
+        target_link_libraries(${library} PRIVATE myLogger)
     endif()
 
     message(STATUS "Added library ${library}")
