--- a/custom_libraries/custom_c_logger/CMakeLists.txt
+++ b/custom_libraries/custom_c_logger/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(custom_c_logger custom_c_logger.c custom_c_logger.h)
-target_link_libraries(custom_c_logger PRIVATE custom_c_string system_info)
+target_link_libraries(custom_c_logger PRIVATE system_info)
