--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,10 +8,14 @@ add_subdirectory(../custom_libraries/custom_c_string custom_c_string_build)
 add_subdirectory(../custom_libraries/system_info system_info_build)
 add_subdirectory(libraries/server_network)
 add_subdirectory(libraries/client_handler)
+add_subdirectory(libraries/algorithms/custom_c_hash_set)
 add_subdirectory(libraries/web_handler)
 add_subdirectory(libraries/web_handler/file_hierarchy_creator)
 add_subdirectory(libraries/web_handler/downloader)
 add_subdirectory(libraries/web_handler/url_extractor)
+add_subdirectory(libraries/web_handler/url_table)
+add_subdirectory(libraries/web_handler/url_handler)
+add_subdirectory(libraries/algorithms/custom_boyer_moore)
 
 add_executable(server main.c)
 
@@ -20,9 +24,13 @@ target_include_directories(server PRIVATE ../custom_libraries/custom_c_string)
 target_include_directories(server PRIVATE ../custom_libraries/system_info)
 target_include_directories(server PRIVATE libraries/server_network)
 target_include_directories(server PRIVATE libraries/client_handler)
+target_include_directories(server PRIVATE libraries/algorithms/custom_c_hash_set)
 target_include_directories(server PRIVATE libraries/web_handler)
 target_include_directories(server PRIVATE libraries/web_handler/file_hierarchy_creator)
 target_include_directories(server PRIVATE libraries/web_handler/downloader)
 target_include_directories(server PRIVATE libraries/web_handler/url_extractor)
+target_include_directories(server PRIVATE libraries/web_handler/url_table)
+target_include_directories(server PRIVATE libraries/web_handler/url_handler)
+target_include_directories(server PRIVATE libraries/algorithms/custom_boyer_moore)
 
-target_link_libraries(server PRIVATE custom_c_string custom_c_logger server_network downloader file_hierarchy_creator url_extractor client_handler web_handler)
+target_link_libraries(server PRIVATE custom_c_string custom_c_logger custom_boyer_moore custom_c_hashset server_network downloader url_table url_handler file_hierarchy_creator url_extractor client_handler web_handler)
