client modified to work and server solved extension bug for domain != extension

--- a/client/libraries/client_network/CMakeLists.txt
+++ b/client/libraries/client_network/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_library(client_network client_network.c client_network.h)
 target_include_directories(client_network PRIVATE custom_c_string custom_c_logger)
+target_link_libraries(client_network PRIVATE custom_c_string custom_c_logger)
+
